[gd_scene load_steps=16 format=2]

[ext_resource path="res://ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://control.gd" type="Script" id=2]
[ext_resource path="res://res/ui/logo.png" type="Texture" id=3]
[ext_resource path="res://res/ui/bg.png" type="Texture" id=4]
[ext_resource path="res://res/ui/theme/control.tres" type="Theme" id=5]
[ext_resource path="res://core/imgBtn.gd" type="Script" id=6]
[ext_resource path="res://res/ui/kuang.png" type="Texture" id=7]
[ext_resource path="res://res/ui/cardMakerheader.jpg" type="Texture" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Animation" id=2]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("logo/tile:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.8, 1.1, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("logo:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="GDScript" id=4]
script/source = "extends Control


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	if sys.quDao == \"kuaiBao\" :
		$kuaiBao.show()


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="GDScript" id=5]
script/source = "extends Label
tool

# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	text = str(sys.v)

# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[sub_resource type="Animation" id=7]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ImgBtn2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel2" type="Panel" parent="."]
anchor_left = 0.437805
anchor_top = 0.406098
anchor_right = 0.562195
anchor_bottom = 0.768293
theme = ExtResource( 5 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="GridContainer" parent="Panel2"]
anchor_left = -0.60856
anchor_top = -0.0620475
anchor_right = 1.61233
anchor_bottom = 1.47995
margin_left = 0.0800018
margin_top = -0.0469971
margin_right = 0.019989
margin_bottom = -0.0210266
columns = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="jiXuBtn" type="Button" parent="Panel2/Panel"]
margin_right = 228.0
margin_bottom = 79.5986
text = "继续游戏"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel2/Panel"]
margin_left = 232.0
margin_right = 453.511
margin_bottom = 79.5986
text = "开始游戏"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Panel2/Panel"]
margin_top = 83.0
margin_right = 228.511
margin_bottom = 162.599
text = "图谱|升级"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="Panel2/Panel"]
margin_left = 232.0
margin_top = 83.0
margin_right = 453.0
margin_bottom = 162.599
text = "排行榜"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="Panel2/Panel"]
margin_top = 166.0
margin_right = 228.0
margin_bottom = 245.599
text = "创意工坊"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="Panel2/Panel"]
margin_left = 232.0
margin_top = 166.0
margin_right = 453.0
margin_bottom = 245.599
text = "设置"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Panel2/Panel"]
margin_top = 249.0
margin_right = 228.0
margin_bottom = 328.599
text = "退出游戏"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.680293
anchor_top = 0.820833
anchor_right = 0.747976
anchor_bottom = 0.867174
margin_right = -19.0
margin_bottom = -5.0
text = "2019.11.9:1"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="topUi" type="CanvasLayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )

[node name="logo" type="Control" parent="."]
anchor_left = 0.000129272
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 327.788
margin_top = 48.0
margin_right = -47.0
margin_bottom = -419.0
rect_scale = Vector2( 0.72, 0.72 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="tile2" type="Sprite" parent="logo"]
position = Vector2( 635.555, 172.503 )
texture = ExtResource( 3 )

[node name="tile" type="Sprite" parent="logo"]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 3 )
position = Vector2( 635.555, 172.503 )
texture = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.693902
anchor_top = 0.112195
anchor_right = 0.84939
anchor_bottom = 0.804878
__meta__ = {
"_edit_use_anchors_": true
}

[node name="else" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v" type="Label" parent="else"]
anchor_left = 3.25745
anchor_top = 0.884669
anchor_right = 3.34404
anchor_bottom = 0.935889
margin_left = 1431.51
margin_top = 717.966
margin_right = 1479.05
margin_bottom = 757.917
text = "V1.0"
align = 2
script = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="kuaiBao" type="Label" parent="else"]
visible = false
margin_left = 1394.74
margin_top = 704.532
margin_right = 1622.74
margin_bottom = 746.532
text = "独家授权好游快爆发布"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cardMakerheader" type="NinePatchRect" parent="."]
margin_left = 30.9663
margin_top = 30.0
margin_right = 490.966
margin_bottom = 245.0
texture = ExtResource( 7 )
patch_margin_left = 10
patch_margin_top = 8
patch_margin_right = 7
patch_margin_bottom = 9

[node name="ImgBtn" type="TextureRect" parent="cardMakerheader"]
margin_left = 4.0
margin_top = 4.0
margin_right = 456.0
margin_bottom = 210.0
texture = ExtResource( 8 )
expand = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImgBtn2" type="TextureRect" parent="cardMakerheader"]
self_modulate = Color( 1, 1, 1, 0 )
material = SubResource( 6 )
margin_left = 4.0
margin_top = 4.0
margin_right = 456.0
margin_bottom = 210.0
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="cardMakerheader"]
margin_left = 309.512
margin_top = 167.91
margin_right = 453.512
margin_bottom = 209.91
text = "新游戏EA开启"

[node name="AnimationPlayer" type="AnimationPlayer" parent="cardMakerheader"]
autoplay = "idle"
anims/idle = SubResource( 7 )

[connection signal="pressed" from="Panel2/Panel/jiXuBtn" to="." method="_on_jiXuBtn_pressed"]
[connection signal="pressed" from="Panel2/Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel2/Panel/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Panel2/Panel/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Panel2/Panel/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Panel2/Panel/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Panel2/Panel/Button3" to="." method="_on_Button3_pressed"]
[connection signal="onPressed" from="cardMakerheader/ImgBtn" to="." method="_on_cardMakerBtn_onPressed"]
